Oppdatert api etter avklaringsmøte med Geir og Trond.
