# src/main/kotlin/no/nav/sokos/api/entitet/FinnYtelserRequest.kt
@@ -1,9 +1,7 @@
 package no.nav.sokos.api.entitet
 
-import java.time.LocalDate
-
 class FinnYtelserRequest (
-    val fom: LocalDate,
-    val tom: LocalDate,
-    val fnrEllerOrgnr: List<String>
+    val periode: Periode,
+    val mottakere  : List<String>,
+    val ytelseskoder: List<String>
 )
