# src/main/kotlin/no/nav/sokos/api/entitet/Mottaker.kt
@@ -1,0 +1,7 @@
+package no.nav.sokos.api.entitet
+
+class Mottaker(
+    val mottakerId: String,
+    val ytelser: List<Ytelse>
+
+)
