# src/main/kotlin/no/nav/sokos/api/entitet/Utbetaling.kt
@@ -1,5 +1,0 @@
-package no.nav.sokos.api.entitet
-
-class Utbetaling(
-    val fnrEllerOrgnr: String
-)
